log/build_2025-08-26_17-58-54/soft_ws/stderr.log
  File "/home/honami/soft_ws/install/soft_ws/lib/python3.10/site-packages/soft_ws/goal_navigation_with_imu.py", line 175
    /goal_fix
    ^
SyntaxError: invalid syntax

